--- a/Edukator.BusinessLayer/Edukator.BusinessLayer.csproj
+++ b/Edukator.BusinessLayer/Edukator.BusinessLayer.csproj
@@ -9,7 +9,7 @@
     <Folder Include="Concrete\" />
     <Folder Include="ErrorMessage\" />
     <Folder Include="Logging\" />
-    <Folder Include="Extension\" />
+    <Folder Include="Container\" />
     <Folder Include="ValidationRules\" />
   </ItemGroup>
 
