The end of Lesson 19

--- a/Edukator.PresentationLayer/Edukator.PresentationLayer.csproj
+++ b/Edukator.PresentationLayer/Edukator.PresentationLayer.csproj
@@ -27,4 +27,9 @@
     <ProjectReference Include="..\Edukator.EntityLayer\Edukator.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Member\Data\" />
+    <Folder Include="Areas\Member\Models\" />
+  </ItemGroup>
+
 </Project>
