--- a/Edukator.PresentationLayer/Edukator.PresentationLayer.csproj
+++ b/Edukator.PresentationLayer/Edukator.PresentationLayer.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <Folder Include="Areas\Member\Data\" />
     <Folder Include="Areas\Member\Models\" />
+    <Folder Include="wwwroot\userimages\" />
   </ItemGroup>
 
 </Project>
